trunk/icefaces/ace/component/resources/icefaces.ace/checkboxbutton/checkboxbutton.css
/*
 * Copyright 2004-2014 ICEsoft Technologies Canada Corp.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the
 * License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an "AS
 * IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
 * express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */


.ice-checkboxbutton {
	display:inline-block;
}

.ice-checkboxbutton .ui-label {
	padding: 0.2em 0.45em 0.2em 0.2em;
}

.ice-checkboxbutton .ui-button > span > button {
    border:none;
	padding: 0.2em 0.2em 0.2em 0.45em;

    /* IE7 hacks */
    *padding: 0px 6px 0px;
    *font-size: small;
}

.ui-button .fa-lg {
	min-width: 1em;
	text-align: left;
}

.ice-checkboxbutton-checked .ui-label {
	opacity: 1;
}

.ice-checkboxbutton-unchecked .ui-label {
	opacity: 0.25;
}

.ice-ace-checkboxbuttons {
	text-align: center;
}

.ice-ace-checkboxbuttons .ice-checkboxbutton {
	margin-right: 10px;
}

.ice-ace-checkboxbuttons.ice-ace-checkboxbuttons-vertical {
	text-align: left;
}

.ice-ace-checkboxbuttons.ice-ace-checkboxbuttons-vertical .ice-checkboxbutton {
	display: block;
	margin-right: 0;
	margin-left: 5px;
}

.ice-ace-checkboxbuttons.ice-ace-checkboxbuttons-vertical .ui-widget-header {
	text-align: center;
}

